--- a/homepage.html
+++ b/homepage.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
     <div id="mainContent">
         <div id="myImage">
-
+            <img src="https://www.shutterstock.com/image-photo/panoramic-landscape-sunset-mountains-260nw-1910819164.jpg" alt="M.Sriram" width="100%" height="200vh">
         </div>
         <div id="myDescription">
-            <h1></h1>
-            <h2></h2>
+            <h1>SRIRAM MUPPURU</h1>
+            <h2>I am the monk in the voyage to<br>
+                Prove god through physics<br>
+                Help world through ML<br>
+                Earn money through physics </h2>
         </div>
         <hr>
         <div id="nav"></div>
