--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #mainContent {
+            padding:0% 10%;
+        }
 
+        #myImage {
+            justify-content: center;
+        }
+
+        #myDescription {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <div id="mainContent">
